# audio_equalizer

./: .gitignore  CMakeLists.txt  FFTSolver.cpp  FFTSolver.h  FunctionSampling.cpp  FunctionSampling.h  README.md  SignalSampling.cpp  SignalSampling.h  a.out  computeFFT.sh  computeIFFT.sh  data.txt  dataL.txt  dataR.txt  equalize  equalize.cpp  equalizeScript.sh  equalizer.sh  fft.cpp  fft_output.txt  ifft.cpp  main  main.cpp  main.py  parseWav.py  runAnalysis.sh  seqDiag.mdj  sineGen.py  very_cool_equalizer
datafiles/: after_eq.txt  before_eq.txt  data.txt  freqState.txt  info.txt
exceptions/: NonPower2Exception.h
python_utils/: equalizerGUI.py  equalizerGUI.spec  parseWav.py  plotTransform.py  sineGen.py  slider.py  tkinterTest.py
results/: fft_data.txt  fft_output.txt  frequency_data.txt  ifft_data.txt  info.txt  time_data.txt  transform_data.txt
